Finish footer partial

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,21 +1,23 @@
 
 <hr>
 
-<ul>
-  <li>
-    <a href="<%= root_url %>"> Home </a>
-  </li>
-  
-  <li>
-    <a href="#about">About</a>
-  </li>
-  
-  <li>
-    <a href="#spaced">Spaced Repetition</a>
-  </li>
-  
-  <li>
-    <a href="#contact">Contact</a>
-  </li>
-  
-</ul>
+<section class="footer">    
+  <ul class="links">
+    <li>
+      <a href="<%= root_url %>"> Home </a>
+    </li>
+    
+    <li>
+      <a href="#about">About</a>
+    </li>
+    
+    <li>
+      <a href="#spaced">Spaced Repetition</a>
+    </li>
+    
+    <li>
+      <a href="#contact">Contact</a>
+    </li>
+    
+  </ul>
+</section>
