--- a/app/views/shared/_user_form.html.erb
+++ b/app/views/shared/_user_form.html.erb
@@ -1,8 +1,8 @@
 
 <% if current_user %>
-  <% button_text = "Save Update" %>
+  <% button_text = "Save Face" %>
 <% else %>
-  <% button_text = "Get your space" %>
+  <% button_text = "Get Space" %>
 <% end %>
 
 <section class="user-form">
