Add delete button on account edit page, add sass-rails gem

--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -3,3 +3,10 @@
 </section>
 
 <%= render "shared/user_form" %>
+
+
+<form class="delete-account" action="<%= users_url(current_user)%>" method="post">
+  <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>">
+  <input type="hidden" name="_method" value="delete">
+  <button type="submit"> Erase Your Space</button>
+</form>
