Fixed bugs in user auth, works as intended now

--- a/app/views/shared/_flash.html.erb
+++ b/app/views/shared/_flash.html.erb
@@ -1,15 +1,18 @@
-<section class="flash-msg">
-  <ul class="flash-msg-list">
-    <% if flash[:notice] %>
-      <li class="flash-msg-item">
-        <%= flash[:notice] %>
-      </li>
-    <% elsif flash.now  %>
-      <% flash.now.each do |msg| %>
+
+<% if flash %>
+  <section class="flash-msg">
+    <ul class="flash-msg-list">
+      <% if flash[:notice] %>
         <li class="flash-msg-item">
-          <%= msg %>
+          <%= flash[:notice] %>
         </li>
+      <% elsif flash.now[:errors]  %>
+        <% flash.now[:errors].each do |msg| %>
+          <li class="flash-msg-item">
+            <%= msg %>
+          </li>
+        <% end %>
       <% end %>
-    <% end %>
-  </ul>
-</section>
+    </ul>
+  </section>
+<% end %>
