--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -3,7 +3,7 @@
   <h1> Get yourself a space to StudyTwo</h1>
 </section>
 
-<%= render "shared/flash" %>
 
-<%= render "shared/user_form" %>
+
+<%= render "shared/user_form", action_url: users_url, button_text: "Get Your Own Space" %>
 
