--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -4,7 +4,7 @@
     <a class="user-dashboard-link" href="<%= user_url(current_user) %>" >
       <%= current_user.email %>
     </a> |
-    <a href="<%= user_edit_url(current_user) %>" class="user-profile-link">
+    <a href="<%= edit_user_url(current_user) %>" class="user-profile-link">
       Profile
     </a>|
     <form class= "logout-button" action="<%= session_url(current_user) %>" method="post">
