--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -2,10 +2,10 @@
   <h1> Re-Face Your Space</h1>
 </section>
 
-<%= render "shared/user_form" %>
+<%= render "shared/user_form", action_url: users_url(current_user), button_text: "Save Face" %>
 
 
-<form class="delete-account" action="<%= users_url(current_user)%>" method="post">
+<form class="delete-account" action="<%= user_url(current_user)%>" method="post">
   <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>">
   <input type="hidden" name="_method" value="delete">
   <button type="submit"> Erase Your Space</button>
