Edit phase 1 mockups to reflect current layout and content. Edit welcome and user edit views with little refinements

--- a/app/views/root/welcome.html.erb
+++ b/app/views/root/welcome.html.erb
@@ -16,7 +16,7 @@
       What's smart about our flashcards? 
     </h1> 
     <p>
-      Our flashcard integrate a <em>customized spaced repetition algorithm</em> to help you learn better and faster.    
+      Our flashcardss integrate a <em>customized spaced repetition algorithm</em> to help you learn better and faster.    
     </p>
     <a class="sign-up-btn" href="<%= new_user_url %>"> Start Learning Now! </a>
   </article>
