--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -8,5 +8,5 @@
 <form class="delete-account" action="<%= user_url(current_user)%>" method="post">
   <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>">
   <input type="hidden" name="_method" value="delete">
-  <button type="submit"> Erase Your Space</button>
+  <input type="submit" data-confirm="This is forever! Are you sure?" value="Erase Your Space(delete your account)">
 </form>
