Fixed bug that didn't allow users to edit email without also including the password

--- a/app/views/shared/_user_form.html.erb
+++ b/app/views/shared/_user_form.html.erb
@@ -3,8 +3,11 @@
 <section class="user-form">
   <form  action="<%= action_url %>" method="post">
     <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>">
+    <% if current_user %>
+      <input type="hidden" name="_method" value="patch">
+    <% end %>
     <label for="user_email" class="form-field">Email:
-      <input type="text" name="user[email]" value="<%= current_user && current_user.email%>">
+      <input type="text" name="user[email]" value="<%= @user && @user.email%>">
     </label>
     <label for="user_password" class="form-field">Password: (6 characters minimum)
       <input type="password" name="user[password]" value="">
