--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -2,7 +2,7 @@
   <h1> Re-Face Your Space</h1>
 </section>
 
-<%= render "shared/user_form", action_url: users_url(current_user), button_text: "Save Face" %>
+<%= render "shared/user_form", action_url: user_url(current_user), button_text: "Save Face" %>
 
 
 <form class="delete-account" action="<%= user_url(current_user)%>" method="post">
