Update Readme and  Phase 2 details. Add Deck table to database and deck model, Begin backbone app

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -16,3 +16,9 @@
   </section>
   
 </section>
+
+<script type="text/javascript">
+$(document).ready(function(){
+  StudyTwo.initialize();
+});
+</script>
