--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,21 +1,11 @@
-<section class="study-overview">
-  <header>
-    <h2> StudyTwo Overview</h2>
-  </header>
-  <section class="decks">
-    <ul>
-      <li>
-        
-        <a href="#" class="deck-name"> Deck 1</a>
-        | Average Score
-        | <button>Add or Edit Cards</button>
-         
-      </li>
-    </ul>
-    <a href="#" class="new-deck-btn"> New Deck </a>
-  </section>
+
+<section id="app" data-user-id="<%=current_user.id%> ">
   
 </section>
+
+
+  
+
 
 <script type="text/javascript">
 $(document).ready(function(){
