Add some styles, add big image to root

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,22 +1,34 @@
 <header class="header">
-  <h1>StudyTwo</h1>
-  <% if logged_in? %>
-    <a class="user-dashboard-link" href="<%= user_url(current_user) %>" >
-      <%= current_user.email %>
-    </a> |
-    <a href="<%= edit_user_url(current_user) %>" class="user-profile-link">
-      Profile
-    </a>|
-    <form class= "logout-button" action="<%= session_url(current_user) %>" method="post">
-      <input type="hidden" name="authenticity_token" value="<%=form_authenticity_token%>">
-      <input type="hidden" name="_method" value="delete">
-      <button type="submit" name="button">Logout</button>
-    </form>
-  <% else %>
-    <a href="<%= new_session_url %>" class="sign-in-link">
-      Log In
-    </a> |
-    <a href="<%= new_user_url %>"> Sign Up</a>
-  
-  <% end %>
+  <section class="header-nav">
+  <a href="<%= current_user ? user_url(current_user) : root_url %>">
+    <h1>StudyTwo</h1>
+  </a>
+
+    <ul>
+      <% if logged_in? %>
+      <li> 
+        <a href="<%=edit_user_url(current_user)%>">
+          <%= current_user.name %>'s Profile
+        </a> 
+      </li>
+      <li><form class= "logout-button" action="<%= session_url(current_user) %>" method="post">
+          <input type="hidden" name="authenticity_token" value="<%=form_authenticity_token%>">
+          <input type="hidden" name="_method" value="delete">
+          <button type="submit" name="button">Logout</button>
+        </form>
+      </li>
+      <% else %>
+        <li>
+          <a href="<%= new_session_url %>" class="sign-in-link">
+            Log In
+          </a>
+        </li>
+        <li>
+          <a href="<%= new_user_url %>"> Sign Up</a>
+        </li>
+      
+      <% end %>
+    </ul>
+   </section> 
+
 </header>
