--- a/app/assets/templates/cards/cardForm.jst.ejs
+++ b/app/assets/templates/cards/cardForm.jst.ejs
@@ -1,16 +1,12 @@
-
-<label for="card_front">Front:
-  <textarea name="card[front]" rows="8" cols="40" id="card_front">
-    <%= card.escape("front") %>
-  </textarea>
-</label>
+<a href="#" class="close-form">X</a>
+<h2> <%= card.isNew() ? "New Card" : "Edit Card" %> </h2>
+<label for="card_front">Front:</label>
+  <textarea name="card[front]" rows="8" cols="40" id="card_front" placeholder="Front Beige"> <%= card.escape("front") %></textarea>
 <input type="hidden" name="card[deck_id]" value="<%=deckId%>">
-<label for="card_back">Back:
-  <textarea name="card[back]" rows="8" cols="40">
-    <%= card.escape("back") %>
-  </textarea>
-</label>
+<label for="card_back">Back:</label>
+  <textarea name="card[back]" rows="8" cols="40" placeholder="Back Beige"> <%= card.escape("back") %></textarea>
 
-<button class="add-more">Save and Make More</button> |&nbsp
-<button class="card-done">Done making cards</button> |&nbsp
-<button class="study">Study Deck</button>
+<div class="form-buttons">
+  <button class="add-more">Save and Make More</button>
+  <button class="card-done">Done making cards</button>   
+</div>
