--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,8 +1,6 @@
 
-<hr>
-
 <section class="footer">    
-  <ul class="links">
+  <ul class="footer-links">
     <li>
       <a href="<%= root_url %>"> Home </a>
     </li>
