--- a/app/views/root/welcome.html.erb
+++ b/app/views/root/welcome.html.erb
@@ -5,7 +5,7 @@
      <h1>StudyBeige</h1>
      
      <h2> 
-       A clone of <a href="https://www.studyblue.com/">StudyBlue</a> with smart flashcards and beige.
+       A clone of <a href="https://www.studyblue.com/">StudyBlue</a> with smart flashcards in beige.
     </h2>
       <a class="sign-up-btn" href="<%= new_user_url %>"> Sign Up Now!</a>
     
@@ -13,11 +13,11 @@
 
   <section class="flash-copy">
 
-      <h1> 
+      <h2> 
         What's smart about our flashcards? 
-      </h1> 
+      </h2> 
       <p>
-        Our flashcards integrate a <em>customized spaced repetition algorithm</em> to help you learn better and faster.    
+        Our flashcards integrate a <em>customized spaced repetition algorithm</em> to help you learn better and faster. And then there's all this beige!    
       </p>
       <a class="sign-up-btn" href="<%= new_user_url %>"> Start Now!</a>
 
