--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,7 +1,7 @@
 
-<section id="app" data-user-id="<%=current_user.id%> ">
+<main id="app" data-user-id="<%=current_user.id%> ">
   
-</section>
+</main>
 
 
   
