--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,7 +1,7 @@
 <header class="header">
   <section class="header-nav">
   <a href="<%= current_user ? user_url(current_user) : root_url %>">
-    <h1>StudyTwo</h1>
+    <h1>StudyBeige</h1>
   </a>
 
     <ul>
