--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,9 +1,9 @@
 
 <section class="form-header">
-  <h1> Get yourself a space to StudyTwo</h1>
+  <h1> Get Beige and Study, StudyBeige</h1>
 </section>
 
 
 
-<%= render "shared/user_form", action_url: users_url, button_text: "Get Your Own Space" %>
+<%= render "shared/user_form", action_url: users_url, button_text: "Get Beiged" %>
 
