--- a/app/assets/stylesheets/form.scss
+++ b/app/assets/stylesheets/form.scss
@@ -66,12 +66,17 @@
   width: 100%;
   display: flex;
   flex-flow: row nowrap;
-  justify-content: space-around;
+  justify-content: center;
+}
+
+
+.deck-form .form-buttons {
+  justify-content: space-between;
 }
 
 .card-form .form-buttons {
   justify-content: space-between;
-  margin: 20px;
+
 }
 
 
@@ -80,7 +85,6 @@
   border: 2px solid #374140;
   padding: 10px;
   border-radius: 3px;
-
   
 }
 
