--- a/app/views/shared/_flash.html.erb
+++ b/app/views/shared/_flash.html.erb
@@ -1,14 +1,15 @@
 
-<% if flash %>
+<% if !flash.empty? %>
+
   <section class="flash-msg">
     <ul class="flash-msg-list">
       <% if flash[:notice] %>
-        <li class="flash-msg-item">
+        <li class="flash-msg-item notice">
           <%= flash[:notice] %>
         </li>
       <% elsif flash.now[:errors]  %>
         <% flash.now[:errors].each do |msg| %>
-          <li class="flash-msg-item">
+          <li class="flash-msg-item error">
             <%= msg %>
           </li>
         <% end %>
