Add conditional to user show template for users without decks

--- a/app/assets/stylesheets/app_styles.scss
+++ b/app/assets/stylesheets/app_styles.scss
@@ -28,6 +28,17 @@
   padding: 0 20px;
 }
 
+.new-study-section {
+  border: 0;
+}
+
+.new-study-section .new-deck {
+  margin-bottom: 20px;
+  font-size: 36px;
+}
+
+
+
 .deck-status {
   width: 400px;
   margin: 0 auto;
