--- a/app/assets/stylesheets/app_styles.scss
+++ b/app/assets/stylesheets/app_styles.scss
@@ -16,7 +16,7 @@
   display: flex;
   flex:1;
   flex-flow: column;
-  border-right: 1px solid #374140
+
   
 
   
@@ -140,6 +140,7 @@
  flex: 1;
  padding: 10px;
  justify-content: center;
+ border-left: 1px solid #374140
 
 }
 
