Omniauth twitter setup

--- a/app/assets/stylesheets/form.scss
+++ b/app/assets/stylesheets/form.scss
@@ -92,3 +92,19 @@
   background:#2A2C2B;
   color: #D9CB9E;
 }
+
+.twitter-signin a{
+  display: block;
+  color: #73f2fc;
+  border: 2px solid #73f2fc;
+  padding: 10px;
+  text-align: center;
+  border-radius: 3px;  
+}
+
+.twitter-signin a:hover{
+  color: #FFFFF0;
+  background:#73f2fc;
+  
+}
+
