--- a/app/assets/stylesheets/form.scss
+++ b/app/assets/stylesheets/form.scss
@@ -32,7 +32,7 @@
   
 }
 
-.form > input, .form > textarea {
+.form > input, {
   border: 1px solid #374140;
   padding: 10px;
   border-radius: 3px;
@@ -77,6 +77,24 @@
 .card-form .form-buttons {
   justify-content: space-between;
 
+}
+
+.card-form div#card_front,
+.card-form div#card_back {
+  border: 1px solid #374140;
+  padding: 10px;
+  border-radius: 3px;
+  min-height: 100px;
+}
+
+.card-form div[contenteditable="true"]:empty:not(:focus):before{
+  content:attr(data-ph);
+  color:grey;
+}
+
+#card_front:focus,
+#card_front:focus {
+  outline: none;
 }
 
 
