--- a/app/assets/templates/cards/cardForm.jst.ejs
+++ b/app/assets/templates/cards/cardForm.jst.ejs
@@ -1,12 +1,13 @@
 <a href="#" class="close-form">X</a>
 <h2> <%= card.isNew() ? "New Card" : "Edit Card" %> </h2>
 <label for="card_front">Front:</label>
-<input type="file" id="front-image" name="card[front_image]">
-  <textarea name="card[front]" rows="8" cols="40" id="card_front" placeholder="Front Beige(or picture beige ↑ )"><%= card.escape("front") %></textarea>
+<input type="file" id="front-image">
+  <div id="card_front" contenteditable="true" data-ph="Type in the front of your card here you can also add a picture by choosing a file above ↑"><%= card.escape("front") %><% if (card.escape("front_image_url").length > 3){ %><img src="<%=card.escape('front_image_url')%>" alt="front card image"/><% } %></div>
+
   
 <label for="card_back">Back:</label> 
 <input type="file" name="card[back_image]" id="back-image">
-  <textarea name="card[back]" rows="8" cols="40" placeholder="Back Beige (or picture beige ↑)" id="card_back"><%= card.escape("back") %></textarea>
+  <div id="card_back" contenteditable="true" data-ph="Type in the back of your card here you can also add a picture by choosing a file above ↑"><%= card.escape("back") %><% if (card.escape("back_image_url").length > 3){ %><img src="<%=card.escape('back_image_url')%>" alt="back card image"/><% } %></div>
 
 <div class="form-buttons">
   <button class="add-more">Save and Make More</button>
