Working on spaced repetition

--- a/app/assets/templates/decks/deckOverview.jst.ejs
+++ b/app/assets/templates/decks/deckOverview.jst.ejs
@@ -27,7 +27,7 @@
             </p>
             
             <p class="deck-info">
-              Avg Score: #
+              Avg Score: <%= deck.get("average_score") %>
             </p>
             
             <a href="#decks/<%=deck.id%>" class="edit-deck" data-deck-id="<%=deck.id%>">Edit Deck</a>
