--- a/app/assets/templates/cards/studyCard.jst.ejs
+++ b/app/assets/templates/cards/studyCard.jst.ejs
@@ -1,5 +1,6 @@
 
 <section class="card-front">
+  <h3> Front: </h3>
 <p>
   <%= card.escape("front") %><% if (card.escape("front_image_url").length > 3){ %><img src="<%=card.escape('front_image_url')%>" alt="front card image" class="study-front-image"/><% } %>
 </p>
@@ -7,13 +8,15 @@
 <button type="button" class="show-answer">Show Answer</button>
 </section>
 <section class="card-back">
+  <h3> Back: </h3>
   <p>
     <%= card.escape("back") %><% if (card.escape("back_image_url").length > 3){ %><img src="<%=card.escape('back_image_url')%>" alt="back card image" class-"study-back-image"/><% } %>
   </p>
-  <div class="answer-buttons">
+  
+</section>
+  <section class="answer-buttons">
+    <h3>How did you do?</h3>
     <button type="button" class="wrong-answer">Wrong Answer</button>
     <button type="button" class="kinda-right-answer">Kinda Right</button>
     <button type="button" class="totally-right">Totally Right</button>
-  </div>
-  
-</section>
+  </section>
