--- a/app/assets/stylesheets/form.scss
+++ b/app/assets/stylesheets/form.scss
@@ -11,7 +11,7 @@
   flex-flow: column;
   position: relative;
   padding: 10px;
-  max-width: 600px;
+  width: 400px;
   margin: 0 auto;
   
 }
@@ -20,6 +20,11 @@
 .form h2 {
   font-size: 20px;
   font-weight: bold;
+}
+
+.form h3 {
+  font-size: 18px;
+  color:#C38500;
 }
 
 .form > label, .form > input {
@@ -85,6 +90,7 @@
   padding: 10px;
   border-radius: 3px;
   min-height: 100px;
+
 }
 
 .card-form div[contenteditable="true"]:empty:not(:focus):before{
@@ -93,9 +99,17 @@
 }
 
 #card_front:focus,
-#card_front:focus {
+#card_back:focus {
   outline: none;
 }
+
+#card_front img,
+#card_back img {
+  display: block;
+  width: 50%;
+  margin: 0 auto;
+}
+
 
 
 .form-buttons button {
