Change card info view to just show last score

--- a/app/assets/templates/cards/studyCard.jst.ejs
+++ b/app/assets/templates/cards/studyCard.jst.ejs
@@ -16,7 +16,7 @@
 </section>
   <section class="answer-buttons hide">
     <h3>How did you do?</h3>
-    <button type="button" class="wrong-answer ">Wrong Answer</button>
-    <button type="button" class="kinda-right-answer ">Kinda Right</button>
-    <button type="button" class="totally-right ">Totally Right</button>
+    <button type="button" class="wrong-answer">Wrong Answer (Score: 0)</button>
+    <button type="button" class="kinda-right-answer">Kinda Right(Score: 1)</button>
+    <button type="button" class="totally-right">Totally Right(Score: 2)</button>
   </section>
