--- a/app/assets/templates/decks/deckShow.jst.ejs
+++ b/app/assets/templates/decks/deckShow.jst.ejs
@@ -34,7 +34,7 @@
           Due:
         </p>
         <p class="card-info-header">
-          Streak | Score
+          Last Score
         </p>
         <p class="card-info-header">
           Edit/Delete
@@ -58,7 +58,7 @@
           
           <p class="card-info">
             
-            <%= card.escape("streak")  %> | <%= card.escape("score") %>
+            <%= card.escape("score") %>
           </p>
           
           <p class="card-info">
