--- a/app/views/root/welcome.html.erb
+++ b/app/views/root/welcome.html.erb
@@ -8,6 +8,7 @@
        A clone of <a href="https://www.studyblue.com/">StudyBlue</a> with smart flashcards in beige.
     </h2>
       <a class="sign-up-btn" href="<%= new_user_url %>"> Sign Up Now!</a>
+      <a href="sessions/guest" class="sign-up-btn">Guest Sign In</a>
     
   </section>
 
