--- a/app/views/root/welcome.html.erb
+++ b/app/views/root/welcome.html.erb
@@ -5,7 +5,7 @@
      <h1>StudyBeige</h1>
      
      <h2> 
-       A clone of <a href="https://www.studyblue.com/">StudyBlue</a> with smart flashcards in beige.
+       A smart flashcard app inspired by <a href="https://www.studyblue.com/">StudyBlue</a> but better because BEIGE!
     </h2>
       <a class="sign-up-btn" href="<%= new_user_url %>"> Sign Up Now!</a>
       <a href="sessions/guest" class="sign-up-btn">Guest Sign In</a>
@@ -13,13 +13,47 @@
   </section>
 
   <section class="flash-copy">
-
-      <h2> 
-        What's smart about our flashcards? 
-      </h2> 
-      <p>
-        Our flashcards integrate a <em>customized spaced repetition algorithm</em> to help you learn better and faster. And then there's all this beige!    
-      </p>
+    
+    <article class="flash-copy-article">
+      <h2>Why StudyBeige?</h2>
+      
+      <ul class="feature-list">
+        <li>
+          Create Multiple Decks of cards
+        </li>
+        
+        <li>
+          Organize the cards in your deck
+        </li>
+        
+        <li>
+          Add pictures to the back and front of your cards
+        </li>
+        
+      </ul>
+      
+    </article>
+    
+      
+      <article class="flash-copy-article">
+        <h2> 
+          What's smart about our flashcards? 
+        </h2> 
+    
+        <ul class="feature-list number-list">
+          <li>
+            Use spaced repetition to spread your study out
+          </li>
+          <li>
+            Focus on the things that give you the most trouble
+          </li>
+          <li>
+            Never study too much or too little. 
+          </li>
+        </ul>
+        
+      </article>
+      
       <a class="sign-up-btn" href="<%= new_user_url %>"> Start Now!</a>
 
     
