Add instructions in Study Mode

--- a/app/assets/templates/decks/studyMode.jst.ejs
+++ b/app/assets/templates/decks/studyMode.jst.ejs
@@ -1,5 +1,7 @@
  <h2> Studying Beige </h2>
-
+ <h3> Try to remember what's on the back of the card.</h3>
+ <h3>Click <b>Show Answer</b> to rate how you did</h3>
+ <h3>You will have to redo any you get wrong in this study session.</h3>
 <section class="card-view">
   
 </section>
