Fix header link, Edit CardForm

--- a/app/assets/templates/cards/cardForm.jst.ejs
+++ b/app/assets/templates/cards/cardForm.jst.ejs
@@ -26,5 +26,5 @@
 <div class="form-buttons">
   <button class="add-more">Save and Make More</button>
   
-  <button class="card-done">Done making cards</button>   
+  <button class="card-done">Save and Close</button>   
 </div>
