--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,6 +1,6 @@
 <header class="header">
   <section class="header-nav">
-  <a href="<%= current_user ? user_url(current_user) : root_url %>">
+  <a href="<%=  root_url %>">
     <h1>StudyBeige</h1>
   </a>
 
