Add link in header to study space for logged in users

--- a/app/assets/templates/decks/deckOverview.jst.ejs
+++ b/app/assets/templates/decks/deckOverview.jst.ejs
@@ -1,6 +1,6 @@
 <% if (decks.length > 0) { %>
   <section class="study-section">
-    <h1>Study.  Beige.</h1>
+    <h1>Your Study Space</h1>
     <ul class="deck-status">
       <% decks.each(function(deck){ %>
       <li>
